--- a/index.html
+++ b/index.html
@@ -10,28 +10,34 @@
         h2 { color: #FF9F0A; margin-top: 30px; }
         p { color: #ccc; }
         .footer { margin-top: 50px; font-size: 0.8em; color: #666; border-top: 1px solid #333; padding-top: 20px; }
+        ul { color: #ccc; }
     </style>
 </head>
 <body>
     <h1>Политика конфиденциальности</h1>
     <p>Приложение «Цифры» (далее — Приложение) уделяет большое внимание безопасности ваших данных. Данная политика описывает, как мы обрабатываем информацию.</p>
 
-    <h2>1. Сбор информации</h2>
-    <p>При использовании функции «Вход с Apple» Приложение получает ваш уникальный идентификатор пользователя (UID) и имя профиля. Эта информация используется исключительно для обеспечения работы личного кабинета и идентификации вас как автора в разделе «Дайджест».</p>
+    <h2>1. Сбор информации и Идентификаторы</h2>
+    <p>При использовании функции «Вход с Apple» Приложение получает ваш уникальный идентификатор пользователя (UID) и публичное имя профиля. Мы также можем собирать анонимные идентификаторы устройств для аналитики и улучшения стабильности работы (диагностики сбоев).</p>
 
-    <h2>2. Финансовые данные</h2>
-    <p>Все ваши записи о транзакциях, бюджетах, целях и активах хранятся исключительно в вашем личном хранилище <strong>iCloud</strong>. Разработчик Приложения не имеет доступа к этой информации, не собирает её и не передает третьим лицам.</p>
+    <h2>2. Финансовые данные и Синхронизация</h2>
+    <p>Ваши записи о транзакциях, бюджетах, целях и активах хранятся в двух контурах:</p>
+    <ul>
+        <li><strong>iCloud:</strong> для обеспечения приватного хранения данных в экосистеме Apple.</li>
+        <li><strong>Firebase (Google Cloud):</strong> для обеспечения синхронизации данных между вашими устройствами и кроссплатформенного доступа.</li>
+    </ul>
+    <p>Финансовые данные хранятся в облачной базе в зашифрованном бинарном виде. Разработчик Приложения не использует эту информацию для идентификации вашей личности в реальном мире и не передает её третьим лицам.</p>
 
     <h2>3. Сторонние сервисы</h2>
     <p>Для обеспечения работы функций мы используем следующие сервисы:</p>
     <ul>
-        <li><strong>Firebase (Google):</strong> для авторизации и хранения публичных статей в Дайджесте.</li>
+        <li><strong>Firebase (Google):</strong> для авторизации, хранения профилей и облачной синхронизации данных.</li>
         <li><strong>Apple Speech Recognition:</strong> для обработки голосовых команд.</li>
-        <li><strong>GigaChat (Sber):</strong> для лингвистического анализа текста операций (передается только текст фразы без личных данных).</li>
+        <li><strong>GigaChat (Sber):</strong> для лингвистического анализа текста операций (передается только текст фразы без привязки к личности пользователя).</li>
     </ul>
 
     <h2>4. Удаление данных</h2>
-    <p>Вы можете в любой момент полностью удалить все свои данные, используя функцию «Сброс всех данных» в настройках Приложения. Это удалит информацию как с устройства, так и из вашего iCloud.</p>
+    <p>Вы имеете полный контроль над своей информацией. Вы можете в любой момент полностью удалить все свои данные (включая профиль, историю операций и активы), используя функцию «Сброс всех данных» в настройках Приложения. Это действие безвозвратно удалит информацию с устройства, из iCloud и из облачной базы Firebase.</p>
 
     <div class="footer">
         <p>Контактная информация: official.raev@gmail.com</p>
